--- a/app/package.json
+++ b/app/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.1.3",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-cookie": "^3.0.4",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
