--- a/app/package.json
+++ b/app/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.14.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "bootstrap": "^4.1.3",
     "moment": "^2.29.1",
+    "node-sass": "^4.14.0",
     "react": "^17.0.2",
     "react-cookie": "^3.0.4",
     "react-datepicker": "^4.1.1",
